<resources>
    <string name="app_name">My Chat</string>
    <string name="hi_leo_what_s_up_ni_need_new_logo_for_group">Hi leo. What\'s up ??\nI need a new logo for group. </string>
    <string name="simple_minimum_and_beauti">Simple , minimal and beauti..</string>
    <string name="_22_30">22:30</string>
    <string name="ok_i_ll_start_next_week_nsend_me_documents_today">Ok, I\'ll start next week.\nSend me documents today</string>
    <string name="oh_that_s_great">Oh . that\'s great 😍</string>
    <string name="_22_33">22:33</string>
    <string name="_22_31">22:31</string>

</resources>